use charset where possible